    * Closing the last tab of a window now respects the Firefox setting:
    browser.tabs.closeWindowWithLastTab, which means those who are used to :tabclose never closing
    the window when closing the last tab, should set this option to false (either through about:config
    or with :set! browser.tabs.closeWindowWithLastTab=false)
    * gr toggles Reader View

2015-08-25:
    * Version 3.10.1
    * Max version is 44.

2015-08-25:
    * Version 3.10
    * Keeping the lights on with support for Aurora and Nightly builds of firefox.
    * Bump up minimum version to current ESR release of firefox (version 38).
    * First release by @gkatsev
    * Keep default Firefox mapping of <PageDown>, <PageUp>, <Left>, <Right>,
      <Up>, <Down>, <Home> and <End>.
      This is done to (a) allow default Firefox smooth scrolling and (b) to
      easily allow web pages to override these keys as they are often done
      for <Left>/<Right> for navigating image galleries
    * Add ';#', an extended hint mode for yanking the anchor URL of an element
      (the URL of the page with the fragment set to the element's 'id' or
      'name' attribute)
    * Firefox compatibility fixes

2015-02-15: Missed Valentine's day
    * Version 3.9
    * We don't override <S-Insert> in textboxes anymore, so it does the default
      action (which is pasting the clipboard). For Windows and Mac users, this doesn't
      change anything. For Linux, this means it pastes the clipboard instead of the X11
      selection, but that's actually also the default for most GUI apps on Linux nowadays.
      On the other hand, it also fixes an annoying bug where the first completion stayed
      active when using <S-Insert> in the command line.
    * Finally remove local file completions from the :open prompt which causes lots of problems (and
      slowdowns) for many people. If you want them back, use :set complete=slf
      to get back the old default value.